# FastAPI_template

./: README.md  pyproject.toml
src/fastapi_template/: main.py
